--- a/oslopm.css
+++ b/oslopm.css
@@ -40,7 +40,7 @@ div.maintext {
 	margin-top: 0px;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
 	margin-bottom: 0px;
 	margin-top: 0px;
 }
@@ -55,6 +55,10 @@ h2 {
 
 h3 {
 	font-size: medium;
+}
+
+h4 {
+	font-size: small;
 }
 
 pre {
