--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,17 @@
 <!DOCTYPE html>
-
-<html lang="no">
-<head>
-  <title>{{ page.title }}</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="Keywords" content="oslo,perl,mongers,brukergruppe,sosial,faglig,forening,bruker,gruppe" lang="no">
-  <meta name="Keywords" content="oslo,perl,mongers,usergroup,social,topical,organization,user,group" lang="en">
-  <meta name="Author" content="{{ page.author }}">
-  <link rev="Made" title="Oslo.pm aktive" href="mailto:oslo-aktive@pm.org">
-  <link rel="Bookmark" title="Oslo.pm annonserings-liste" href="http://mail.pm.org/mailman/listinfo/oslo">
-  <link rel="Bookmark" title="Oslo.pm diskusjons-liste" href="http://mail.pm.org/mailman/listinfo/oslo-aktive">
-  <link rel="Bookmark" title="Oslo.pm WebDAV grensesnitt" href="https://groups.pm.org/groups/oslo/">
-  <link rel="stylesheet" href="/assets/oslopm.css" type="text/css" media="screen" title="Plain">
-  <link rel="start" type="text/html" href="http://oslo.pm.org/">
-</head>
-
-<body> 
-  <h1 title="Oslo Post Meridiem">{{ page.title }}</h1>
-
-  <div class="annonsering first">
-{% for post in site.posts limit:1 %}
-    <h2>{{ post.date | date_to_string }}: <a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <p>{{ post.content }}</p>
-{% endfor %}
-  </div>
-
-  <div class="annonsering">
-{{ include links.html }}
-  </div>
-
-  <div class="content">
-{{ content }}
-  </div>
-
-  <div class="langchoose">
-    <img src="images/no.png" alt="Norsk"><img src="images/gb_grey.png" alt="English (coming soon)">
-  </div>
-
-  <div class="postscript" lang="en">
-    Standards followed: <acronym title="W3C-WAI Web Content Accessibility Guidelines 1.0">WCAG 1.0</acronym> <a href="http://www.w3.org/WAI/WCAG1A-Conformance" title="Level A conformance">WAI-A</a>, <a href="http://validator.w3.org/check/referer" title="Valid XHTML 1.0">XHTML 1.0</a>, <a href="http://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS">CSS</a>
-  </div>
-</body>
+<html>
+  {% include head.html %}
+  <body>
+    <div class="wrapper">
+      {% include header.html %}
+      <div id="content">
+        <div id="articles">
+          <div class="article-list">
+            {{ content }}
+          </div>
+        </div>
+      </div>
+      {% include footer.html %}
+    </div>
+  </body>
 </html>
