Add static pages found on http://oslo.pm.org/

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,11 +24,10 @@
         <a href="http://mail.pm.org/mailman/listinfo/oslo">Mailinglist</a>
       </li>
       <li>
-        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
+        <a href="/contact.html">Kontaktinformasjon</a>
       </li>
       <li>
-        <a href="irc://irc.perl.org/oslo.pm">irc.perl.org/oslo.pm</a>
-        <a href="http://mibbit.com/?channel=%23oslo.pm&server=irc.perl.org">(Webchat)</a>
+        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
       </li>
     </ul>
   </div>
