Add information about board members

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,10 @@
         <a href="http://mail.pm.org/mailman/listinfo/oslo">Mailinglist</a>
       </li>
       <li>
-        <a href="/contact.html">Kontaktinformasjon</a>
+        <a href="/board">Board</a>
+      </li>
+      <li>
+        <a href="/statutes">Statutes</a>
       </li>
       <li>
         <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
