--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,5 +9,6 @@
     <a href="/events" class="page-link{% if current == null %} active{% endif %}">Events</a>
     <a href="https://www.meetup.com/Oslo-pm/" class="page-link">Meetup</a>
     <a href="https://www.facebook.com/groups/oslo.pm">Facebook</a>
+    <a href="/contact">Contact</a>
   </div>
 </header>
