Add course and conference information from oslo.pm.org

--- a/_includes/blog_menu.html
+++ b/_includes/blog_menu.html
@@ -3,6 +3,7 @@
     <li>Show:</li>
     <li class="{% if page.filter_name == 'all' %} active{% endif %}"><a href="/blog">All</a></li>
     <li class="{% if page.filter_name == 'meetup' %} active{% endif %}"><a href="/blog/events.html">Events</a></li>
-    <li class="{% if page.filter_name == 'conferences' %} active{% endif %}"><a href="/blog/conferences.html">Conferences</a></li>
+    <li class="{% if page.filter_name == 'conference' %} active{% endif %}"><a href="/blog/conferences.html">Conferences</a></li>
+    <li class="{% if page.filter_name == 'course' %} active{% endif %}"><a href="/blog/courses.html">Courses</a></li>
   </ul>
 </div>
