Changed from "Events" to "Blog" and "Meetup" to "Events" @nicomen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
   <div class="links">
     {% assign current = page.title %}
     <a href="/" class="page-link">About</a>
-    <a href="/events" class="page-link{% if current == null %} active{% endif %}">Events</a>
-    <a href="https://www.meetup.com/Oslo-pm/" class="page-link">Meetup</a>
+    <a href="/blog" class="page-link{% if current == null %} active{% endif %}">Blog</a>
+    <a href="https://www.meetup.com/Oslo-pm/" class="page-link">Events</a>
     <a href="https://www.facebook.com/groups/oslo.pm">Facebook</a>
     <a href="/contact">Contact</a>
   </div>
