--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,8 @@
   <link rel="Bookmark" title="Oslo.pm diskusjons-liste" href="http://mail.pm.org/mailman/listinfo/oslo-aktive">
   <link rel="Bookmark" title="Oslo.pm WebDAV grensesnitt" href="https://groups.pm.org/groups/oslo/">
 
+  {% feed_meta %}
+
 {% if page.author %}
   <meta name="Author" content="{{ page.author }}">
 {% endif %}
