--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,7 @@
   <div class="links">
     {% assign current = page.title %}
     <a href="/" class="page-link">About</a>
-    <a href="/blog" class="page-link{% if current == null %} active{% endif %}">Blog</a>
-    <a href="https://www.meetup.com/Oslo-pm/" class="page-link">Events</a>
+    <a href="/blog/events.html" class="page-link">Events</a>
     <a href="https://www.facebook.com/groups/oslo.pm">Facebook</a>
     <a href="/contact">Contact</a>
   </div>
