--- a/css/lambda.css
+++ b/css/lambda.css
@@ -192,6 +192,20 @@ blockquote p {
     font-size: 16px;
     line-height: 27px;
 }
+
+/*
+ * The following image styling is experimental.
+ * Check out/2017/05/22/damian-conway-at-kulturhuset-on-the-shoulders-of-giants-400-years-of-perl-6.html
+ * for how it looks after changing these two rules
+ */
+.entry .entry-body img {
+  max-height: 300px;
+}
+.entry .entry-body img:first-child {
+  float: right;
+  margin: 0 0 1rem 1rem;
+}
+
 .entry .entry-body strong,
 .entry .entry-body b {
     font-weight: 600;
@@ -423,4 +437,37 @@ button:hover, input[type=button]:hover, .button:hover {
 .site-footer .column {
   width: 50%;
   float: left;
+}
+
+.blog-menu {
+  overflow: hidden;
+  margin: 0.5rem 0;
+}
+
+.blog-menu ul {
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+
+.blog-menu li {
+  margin-right: 0.5rem;
+  display: inline;
+}
+
+.blog-menu a {
+  text-decoration: none;
+}
+
+.blog-menu li.active a {
+  color: #222;
+  text-decoration: underline;
+}
+
+iframe.google-maps {
+  border: 1px solid #aaa;
+  margin: 1rem 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 280px;
 }
