Renamed statutes to bylaws, closes #10

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
         <a href="/board">Board</a>
       </li>
       <li>
-        <a href="/statutes">Statutes</a>
+        <a href="/bylaws">Bylaws</a>
       </li>
       <li>
         <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
