Changed from css to sass and removed some nested divs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header id="main-header">
-  <div id="site-title">
+<header class="main-header">
+  <div class="site-title">
     <a href="/"><img src="/images/oslo.pm-logo.png" alt="Oslo.pm"> {{ site.title }}</a>
   </div>
   <div class="links">
