--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,21 +1,19 @@
 <div class="entry">
-  <div class="entry-content">
+  <article class="entry-content">
     <header>
       <h1 class="entry-title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
       <p class="entry-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.category %} • Category: {{ page.category|capitalize }}{% endif %}</p>
     </header>
 
-    <article class="entry-body">
-      {% if index %}
-        {{ page.excerpt }}
-        {% if page.content contains '<!-- more -->' %}
-        <p><a href="{{ page.url }}">Read more »</a></p>
-        {% endif %}
-      {% else %}
-        {{ content }}
+    {% if index %}
+      {{ page.excerpt }}
+      {% if page.content != page.excerpt %}
+      <p><a href="{{ page.url }}">Read more »</a></p>
       {% endif %}
-    </article>
-  </div>
+    {% else %}
+      {{ content }}
+    {% endif %}
+  </article>
 
 {% if index != true and content and page.related %}
   <div class="related-posts">
