Add /about and moved paged blog to index page #9

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,10 @@
 <header id="main-header">
   <div id="site-title">
-    <img src="/images/oslo.pm-logo.png" alt="Oslo.pm">
-    <a href="/">{{ site.title }}</a>
+    <a href="/"><img src="/images/oslo.pm-logo.png" alt="Oslo.pm"> {{ site.title }}</a>
   </div>
   <div class="links">
     {% assign current = page.title %}
-    <a href="/" class="page-link">About</a>
+    <a href="/about" class="page-link">About</a>
     <a href="/blog/events.html" class="page-link">Events</a>
     <a href="https://www.facebook.com/groups/oslo.pm">Facebook</a>
     <a href="/contact">Contact</a>
