--- a/_sass/_entry.scss
+++ b/_sass/_entry.scss
@@ -17,7 +17,8 @@
 
   .entry-meta {
     font-size: 12px;
-    color: #707070;
+    color: #666;
+    margin: -0.5rem 0 0.5rem 0;
   }
 
   .entry-content {
