--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -29,9 +29,8 @@ small {
 
 h1, h2, h3, h4 {
   font-weight: bold;
-  margin-top: 0.4em;
-  margin-bottom: 0.5em;
-  line-height: 1.3rem;
+  margin: 1em 0;
+  line-height: 1.3em;
 }
 
 h1 { font-size: map-get($header-sizes, h1); }
