--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
   <!-- Custom CSS -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/oslo-pm-2017-09-03.css">
+  <link rel="stylesheet" href="/css/oslo-pm.css">
 
   <!-- script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
