--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,7 +10,17 @@
       {% else %}
       <h1 class="entry-title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
       {% endif %}
-      <p class="entry-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.category %} • Category: {{ page.category|capitalize }}{% endif %}</p>
+      <p class="entry-meta">
+        {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.category %} • Category: {{ page.category|capitalize }}{% endif %}
+        {% for tag in page.tags %}
+          {% if forloop.first %} • {% endif %}
+          {% if site.data.tags.n_of[tag] %}
+            <a href="/blog/{{tag}}.html">{{tag}}</a>
+          {% else %}
+            <span>{{tag}}</span>
+          {% endif %}
+        {% endfor %}
+      </p>
     </header>
 
     {% if index %}
@@ -22,17 +32,4 @@
       {{ content }}
     {% endif %}
   </article>
-
-{% if index != true and content and page.related %}
-  <div class="related-posts">
-    <h2>Related Posts</h2>
-    <ul>
-    {% for post in site.posts %}
-      {% if page.related contains post.title %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endif %}
-    {% endfor %}
-    </ul>
-  </div>
-{% endif %}
 </div>
