--- a/_sass/_entry.scss
+++ b/_sass/_entry.scss
@@ -16,9 +16,12 @@
   }
 
   .entry-meta {
-    font-size: 12px;
-    color: #666;
+    font-size: 0.8rem;
     margin: -0.5rem 0 0.5rem 0;
+
+    &, a {
+      color: #666;
+    }
   }
 
   .entry-content {
