--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
   <div class="links">
     {% assign current = page.title %}
     <a href="/about" class="page-link">About</a>
+    <a href="/blog" class="page-link">Blog</a>
     <a href="/blog/event.html" class="page-link">Events</a>
-    <a href="https://www.facebook.com/groups/oslo.pm">Facebook</a>
     <a href="/contact">Contact</a>
   </div>
 </header>
