--- a/css/oslo-pm.scss
+++ b/css/oslo-pm.scss
@@ -7,6 +7,7 @@
 @import "include-media";
 @import "reset";
 @import "typography";
+@import "forms";
 @import "boxes";
 @import "entry";
 @import "syntax";
