--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <a href="/news/event.html" class="page-link">Events</a>
     <a href="/contact">Contact</a>
   </div>
-  <form id="search_form" action="https://www.google.com/cse">
+  <form class="search-form" action="https://www.google.com/cse">
     <input name="cx" type="hidden" value="003216111130611352982:uvlrck5wffw">
     <input name="ie" type="hidden" value="UTF-8">
     <input name="q" placeholder="Search..." type="search">
