--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,8 @@
   <link rel="icon" type="image/png" href="/images/oslo.pm-logo.png">
   <link rel="shortcut icon" type="image/png" href="/images/oslo.pm-logo.png">
 
-  <!-- Custom CSS -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/oslo-pm.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/css/{{design}}.css">
 
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
