Drafted the npw2018 web page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
   <body>
     <div class="wrapper">
       {% include {{design}}/header.html %}
+      <div class="content">
       {{ content }}
+      </div>
       {% include {{design}}/footer.html %}
     </div>
   </body>
