--- a/_sass/_config.scss
+++ b/_sass/_config.scss
@@ -4,6 +4,7 @@ $line-height: 1.5rem !default;
 $text-color: #111111 !default;
 $link-color: #2868a4 !default;
 $border-color: #ccc !default;
+$seperator-border: 1px solid #e7e7e7 !default;
 $max-width: 44rem !default;
 $gutter: 15px !default;
 $header-sizes: (h1: 22px, h2: 20px, h3: 18px, h4: 16px) !default;
