--- a/_includes/npw_2018/footer.html
+++ b/_includes/npw_2018/footer.html
@@ -1,4 +1,3 @@
-
 {% if paginator && paginator.page %}
 <div class="paginator">
 {% if paginator.next_page %}
@@ -14,20 +13,16 @@
 {% endif %}
 
 <footer class="site-footer">
-  <h4 class="footer-heading">{{ site.title }}</h4>
   <div class="column">
     <ul>
+      <!-- li>
+        <a href="http://mail.pm.org/mailman/listinfo/npw-2018">Mailinglist</a>
+      </li -->
       <li>
-        <a href="http://mail.pm.org/mailman/listinfo/oslo">Mailinglist</a>
+        <a href="http://oslo.pm">Oslo.pm</a>
       </li>
       <li>
-        <a href="/board">Board</a>
-      </li>
-      <li>
-        <a href="/bylaws">Bylaws</a>
-      </li>
-      <li>
-        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
+        <a href="{{ "/2018/feed.xml" | prepend: site.baseurl }}">RSS</a>
       </li>
     </ul>
   </div>
