--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,5 +1,5 @@
 {% if index %}
-<div class="entry --in-list">
+<div class="entry -in-list">
 {% else %}
 <div class="entry">
 {% endif %}
@@ -18,7 +18,6 @@
         {% endfor %}
       </p>
     </header>
-
     {% if index %}
       {{ page.excerpt }}
       {% if page.content != page.excerpt %}
