--- a/css/oslo_pm.scss
+++ b/css/oslo_pm.scss
@@ -3,6 +3,7 @@
 # only Main files contain this front matter, not partials.
 ---
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 @import "config";
 @import "include-media";
 @import "reset";
@@ -13,3 +14,83 @@
 @import "syntax";
 @import "google";
 @import "lambda";
+
+.wrapper {
+  padding: 0 $gutter * 2;
+}
+
+.main-header {
+  margin: $gutter * 2 auto $gutter * 2 auto;
+
+  .site-title {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: normal;
+    vertical-align: middle;
+    a {
+      color: $text-color;
+      text-decoration: none;
+    }
+    img {
+      max-height: 80px;
+      position: relative;
+      top: -5px;
+      float: right;
+      vertical-align: top;
+    }
+    a {
+      vertical-align: middle;
+    }
+  }
+
+  .links {
+    color: #777;
+    vertical-align: middle;
+    padding-bottom: 10px;
+    margin-top: 5px;
+
+    a {
+      text-decoration: none;
+      color: #777;
+      font-weight: 600;
+      margin-right: 10px;
+      &:hover {
+        text-decoration: underline;
+      }
+      &.active {
+        color: #444;
+      }
+    }
+  }
+
+  form {
+    border-top: 2px solid black;
+    margin: 0;
+    padding: 0;
+    clear: both;
+    overflow: hidden;
+  }
+
+  input {
+    background: #f6f6f6 no-repeat 0% 50%;
+    background-image: url(../images/magnifying-glass-1294834_640.png);
+    background-size: contain;
+    font-size: 1.1rem;
+    border: 1px solid #cecece;
+    border-top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0.2rem 0.5rem 0.2rem 2rem;
+    box-sizing: border-box;
+
+    &:focus {
+      border-color: #888;
+      outline: 0;
+    }
+  }
+}
+
+.site-footer {
+  border-top: $seperator-border;
+  margin: 3rem 0 1rem 0;
+}
