Less ugly search input

--- a/_sass/_boxes.scss
+++ b/_sass/_boxes.scss
@@ -57,11 +57,11 @@
   }
 
   input {
-    background: #ddd no-repeat 0% 50%;
+    background: #f6f6f6 no-repeat 0% 50%;
     background-image: url(../images/magnifying-glass-1294834_640.png);
     background-size: contain;
     font-size: 1.1rem;
-    border: 2px solid #ddd;
+    border: 1px solid #cecece;
     border-top: 0;
     width: 100%;
     margin: 0;
