--- a/_includes/oslo_pm/header.html
+++ b/_includes/oslo_pm/header.html
@@ -7,6 +7,7 @@
     <a href="/about" class="page-link">About</a>
     <a href="/news" class="page-link">News</a>
     <a href="/news/event.html" class="page-link">Events</a>
+    <a href="/resources" class="page-link">Resources</a>
     <a href="/contact">Contact</a>
   </div>
   <form class="search-form" action="https://www.google.com/cse">
