Add more information to npw2018
  - curl -L https://github.com/$USERNAME.png?size=140

--- a/_includes/npw2018/footer.html
+++ b/_includes/npw2018/footer.html
@@ -15,7 +15,7 @@
 <footer class="site-footer">
   <ul>
     <li>
-      Powered by <a href="http://oslo.pm">Oslo.pm</a>
+      Powered by <a href="/">Oslo.pm</a>
       and <a href="https://github.com/oslo-pm">Github</a>
     </li>
     <li>
