--- a/_includes/npw2018/header.html
+++ b/_includes/npw2018/header.html
@@ -7,7 +7,8 @@
 <nav>
   <ul>
     <li><a href="/npw2018">Home</a></li>
+    <li><a href="/npw2018/info">Information</a></li>
     <li><a href="/npw2018/news">News</a></li>
-    <li><a href="https://github.com/oslo-pm/NPW2018/issues">Tasks</a></li>
+    <li><a href="/npw2018/info#contact">Contact</a></li>
   </ul>
 </nav>
