--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -27,3 +27,45 @@ form.form-inline {
     }
   }
 }
+
+form {
+  .input-wrap {
+    label {
+      margin-bottom: 0.4rem;
+      display: block;
+    }
+
+    input {
+      background: #fff;
+      font-size: 1rem;
+      border: 2px solid #ccc;
+      margin-bottom: 0.8rem;
+      padding: 0.3em;
+      width: 20em;
+      max-width: 100%;
+    }
+
+    &.-checkbox {
+      margin: 0.8rem 0;
+    }
+  }
+
+  .submit-wrap {
+    margin-bottom: 0.8rem;
+  }
+}
+
+.button {
+  background: #70b51c;
+  color: #fff;
+  font-size: 1em;
+  font-weight: bold;
+  border: 0;
+  border-radius: 2px;
+  padding: 0.4rem 1rem;
+
+  &.-danger {
+    background: darken(#da5a19, 10%);
+    border-color: #333;
+  }
+}
