--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -85,7 +85,7 @@ form {
 
   &.-danger {
     background: darken(#da5a19, 10%);
-    border-color: #333;
+    border-color: transparent;
 
     &:hover {
       background: darken(#da5a19, 10%);
