--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,3 +1,13 @@
+fieldset {
+  margin-bottom: 0.8rem;
+
+  legend {
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin: 0.2rem 0 0.6rem 0;
+  }
+}
+
 form.form-inline {
   input, button {
     font-size: 1rem;
@@ -49,6 +59,12 @@ form {
 
     &.-checkbox {
       margin: 0.8rem 0;
+    }
+
+    &.-radio {
+      label {
+        display: inline-block;
+      }
     }
 
     &.-text {
