--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -45,7 +45,8 @@ form {
       display: block;
     }
 
-    input {
+    input,
+    select {
       font-size: 1rem;
       margin-bottom: 0.8rem;
     }
@@ -55,6 +56,7 @@ form {
       border: 2px solid #ccc;
       border-radius: 2px;
       padding: 0.3em;
+      height: 2rem;
     }
 
     &.-checkbox {
@@ -90,7 +92,7 @@ form {
 
   .form-help {
     font-size: 0.9em;
-    margin: 0 0 0.5rem 0;
+    margin: -0.4rem 0 0.8rem 0;
 
     input {
       width: auto;
