--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,5 +1,5 @@
 fieldset {
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
 
   legend {
     font-size: 1.1rem;
@@ -48,7 +48,7 @@ form {
     input,
     select {
       font-size: 1rem;
-      margin-bottom: 0.8rem;
+      margin-bottom: 1rem;
     }
 
     select {
@@ -60,7 +60,7 @@ form {
     }
 
     &.-checkbox {
-      margin: 0.8rem 0;
+      margin: 1rem 0;
     }
 
     &.-radio {
@@ -79,23 +79,24 @@ form {
         max-width: 100%;
       }
 
-      input[type=checkbox],
-      input[type=radio] {
-        width: auto;
-      }
+    .form-help input {
+      width: auto;
+      margin: 0 0.3rem;
     }
   }
 
   .submit-wrap {
-    margin-bottom: 0.8rem;
+    margin-bottom: 1rem;
   }
 
   .form-help {
     font-size: 0.9em;
-    margin: -0.4rem 0 0.8rem 0;
+    border-left: 3px solid #ccc;
+    padding-left: 0.5rem;
+    margin: -0.4rem 0 1rem 0;
 
-    input {
-      width: auto;
+    label {
+      display: inline;
     }
   }
 }
