--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -46,17 +46,29 @@ form {
     }
 
     input,
-    select {
+    select,
+    textarea {
       font-size: 1rem;
       margin-bottom: 1rem;
     }
 
-    select {
+    select,
+    textarea {
       background: #fff;
       border: 2px solid #ccc;
       border-radius: 2px;
       padding: 0.3em;
+    }
+
+    select {
+      background: #fff;
       height: 2rem;
+    }
+
+    textarea {
+      width: 21em;
+      max-width: 100%;
+      height: 6rem;
     }
 
     &.-checkbox {
@@ -75,7 +87,7 @@ form {
         border: 2px solid #ccc;
         border-radius: 2px;
         padding: 0.3em;
-        width: 20em;
+        width: 21em;
         max-width: 100%;
       }
 
