Add styling for info-box

--- a/_sass/_boxes.scss
+++ b/_sass/_boxes.scss
@@ -18,6 +18,12 @@
   text-align: right;
 }
 
+.info-box {
+  background: #f3e4dd;
+  border: 1px solid #da5a19;
+  padding: 0.3rem 0.8rem;
+}
+
 .wrapper {
   max-width: $max-width;
   margin: 0 auto;
