Add special styling for form elements on newtalk page

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -140,3 +140,12 @@ form {
     }
   }
 }
+
+.user-talk-submit form {
+  &.-text {
+    > input,
+    > textarea {
+      width: 100%;
+    }
+  }
+}
