--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -60,6 +60,11 @@ ul, ol {
   margin: $gutter 0;
   padding-left: 1.2rem;
 
+  ul, ol {
+    margin: 0;
+    padding-left: 0;
+  }
+
   li {
     margin: 0.1rem 0;
     line-height: $line-height;
