Add styling for act specific components

--- a/css/npw2018.scss
+++ b/css/npw2018.scss
@@ -24,6 +24,7 @@ $seperator-border: 1px solid #777;
 @import "entry";
 @import "syntax";
 @import "google";
+@import "act";
 
 body {
   background-image: url(/images/oliver-cole-112209.jpg);
